<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Drawy</string>
    <string name="title">DRAWING</string>
    <string name="subtitle">MADE EASY</string>
    <string name="detailsTitle">Drawing</string>
    <string name="make_photo">Check</string>
    <string name="recognizeButton">Check</string>
    <string name="nextButton">Next</string>
    <string name="successTitle">Hurray! You\'ve completed this drawing</string>
    <string name="successSubTitle">Start new picture, to earn more stars</string>
    <string name="continueButton">Continue</string>
    <string name="divider_text" tools:ignore="PluralsCandidate">Collect %1$d more %2$s and unlock new level!</string>
    <string name="first_divider_text">Try to draw a square, to unlock new levels</string>
    <string name="steps">Steps: %d</string>
    <string name="photo">Photo</string>
    <string name="found_something">We found something…</string>
    <string name="level">Level %d</string>
    <string name="postfix">en</string>
    <string name="tutorialOne">All you need is paper and pencil</string>
    <string name="tutorialTwo">Draw using simple step-by-step tutorials</string>
    <string name="tutorialThree">Neural network recognizes your drawings to unlock new ones</string>
    <string name="tryIt">Try it</string>
    <string name="tryItLabel">Draw a square.\n\nWill the neural network recognize\u00A0it? %1$s</string>
    <string name="PAY_WALL_TEXT">Unlock all tutorials just in 10 seconds!</string>
    <string name="PAY_WALL_TITLE">PRO MODE</string>
    <string name="PAY_BUTTON">Loading…</string>
    <string name="PAY_BUTTON_ERROR">Error</string>
    <string name="PAY_BUTTON_W_PRICE">Unlock for %1$s</string>
    <string name="BILLING_ERROR_POPUP_TITLE">Payment error</string>
    <string name="BILLING_ERROR_POPUP_BODY">Sorry, but we are not able to complete your payment, for unknown reason :(</string>
    <string name="CLOSE_BUTTON">Close</string>
    <string name="PAY_SUCCESS_TITLE">Success payment</string>
    <string name="PAY_SUCCESS_BODY">Congratulations, now you are a Pro!</string>
    <string name="RESTORE_FAILED_BODY">Unfortunately, we can\'t find your previous purchase</string>
    <string name="RESTORE_BUTTON">Restore purchase</string>
    <string name="CONTINUE_BUTTON">Continue</string>
    <string name="UNLOCK_ALL_LEVELS_BUTTON">Unlock all levels</string>
    <string name="facebook_app_id" tools:ignore="MissingTranslation">583744185320259</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb583744185320259</string>
</resources>
