<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/successLayout"
    android:background="#00f"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/successRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="🌟🌟🌟"
            android:textAlignment="center"
            android:textColor="@color/colorForeground"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successTitle"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorForeground"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successSubTitle"
            android:textAlignment="center"
            android:textColor="@color/colorForeground"
            android:textSize="22sp" />

    </LinearLayout>
    <Button
        android:id="@+id/successContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/continueButton"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="60dp" />
</android.support.constraint.ConstraintLayout>