<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#004A72"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        app:title="@string/tryIt"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/headerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/body"
        app:layout_constraintTop_toBottomOf="@id/headerToolbar"
        app:layout_constraintBottom_toTopOf="@id/footerView"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/squarePreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/square_preview"
            app:layout_constraintBottom_toTopOf="@id/label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/label"
            android:layout_width="0dp"
            android:gravity="center"
            android:text="@string/tryItLabel"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/footerView"
        android:layout_width="0dp"
        android:layout_height="@dimen/footerSize">
        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/checkButton"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="@dimen/footerButtonSize"
            android:text="@string/recognizeButton" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>